--- a/bad.css
+++ b/bad.css
@@ -11,7 +11,7 @@
 @import url('https://raw.githack.com/VaporousCreeper/BetterDiscord-ThemesAndPlugins/master/Themes/GGO_Kirito/core.css');
 
 :root{
-    --background: url('https://i.ibb.co/S6xtz0W/87054415.jpg');
+    --background: url('https://i.ibb.co/0BZtyDF/wp10129209.jpg');
     --activetext-colour: white;
 
     --primary1-colour: red;
